--- a/index.html
+++ b/index.html
@@ -4,21 +4,19 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SKYNTALES | Natural Skincare</title>
-    <meta name="description" content="Discover Kanva's natural skincare collection. 100% natural ingredients, cruelty-free, and eco-friendly products for healthy, radiant skin." />
+    <meta name="description" content="Discover Skyntales's natural skincare collection. 100% natural ingredients, cruelty-free, and eco-friendly products for healthy, radiant skin." />
     <meta name="author" content="SKYNTALES" />
     <meta name="keywords" content="natural skincare, organic beauty, cruelty-free, eco-friendly, cleansers, moisturizers, serums" />
-    <link rel="canonical" href="https://kanva.com" />
+    <link rel="canonical" href="https://skyntales.com" />
 
     <meta property="og:title" content="SKYNTALES | Natural Skincare" />
     <meta property="og:description" content="Discover SKYNTALES's natural skincare collection. 100% natural ingredients for healthy, radiant skin." />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://kanva.com" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:url" content="https://skyntales.com" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Kanva | Natural Skincare" />
+    <meta name="twitter:title" content="skyntales | Natural Skincare" />
     <meta name="twitter:description" content="100% natural skincare for healthy, radiant skin." />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
 
   <body>
